# skyrim-hi-res-screenshots

./: CMakeLists.txt  PCH.h  sourcelist.cmake  vcpkg-configuration.json  vcpkg.json
src/: DxgiInfoManager.cpp  DxgiInfoManager.h  Graphics.cpp  Graphics.h  HRS.cpp  HRS.h  HRSException.cpp  HRSException.h  Main.cpp  Renderer.cpp  Renderer.h  Resolution.h  ScreenshotHandler.cpp  ScreenshotHandler.h  Settings.h  Singleton.h  WinAPI.h  Window.cpp  Window.h  WindowsMessageMap.cpp  WindowsMessageMap.h  dxerr.cpp  dxerr.h  logger.cpp  logger.h
